--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="blog-preview-card">
-        <img src="assets/images/illustration-article.svg" alt="HTML & CSS" class="card-image">
+        <img src="assets/images/illustration-article.svg" alt="images" class="card-image">
         <div class="card-content">
                 <span class="category">Learning</span>
                 <div class="date">Published 21 Dec 2023</div>
